# optimize-notes

./: README.md
cuda/: READMD.md  cuda.md  d2d.cu  make
cuda/cuda_util/: cuda_util.py
cuda/gemm/: CMakeLists.txt  README.md  main.cu  timer.h
cuda/gemm/cmake/: cuda.cmake
cuda/gemv/: README.md  main.cu
cuda/grouped_gemm/: README.md
cuda/kernel_launch/: CMakeLists.txt  README.md  main.cu
cuda/layer_norm/: README.md  main.cu
cuda/reduce/: README.md  main.cu  reduce_max.cu
cuda/roofline/: CLAUDE.md  requirements.txt
cuda/roofline/roofline/: CLAUDE.md  __init__.py  roofline.py
cuda/softmax/: README.md  softmax.cu
cuda/swish/: main.cu
cuda/top_k/: README.md  top_k.cu  top_k_wrap_shuffle.cu
cuda/topk/: topk.cu
cuda/warp_shuffle/: README.md
docs/: linux.md  setup_cuda_env.md  setup_env.md
llm/: Sequence_Parallelism.md  kvcache.md  turbo_quant.md
nccl/: cuda_env.sh  make  nccl_example.cu
nsys/: nsys.md
tensorrt/: main.py  trt_sample.py
tensorrt/trt_sample/: build_engine.py  build_engine_dynamicshape.py  fc.py  infer.py
tensorrt_llm/: README.md  serve.sh  trtllm_build.py
torch/mnist_ddp/: README.md  basic.py
transformer/: attention.py  cross_attention.py
triton/softmax/: softmax.py
